--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="loading-spinner"><i class="fas fa-circle-notch fa-5x"></i></div>
     <header class="header">
         <img class="header__logo" src="ohmyfood@2x.svg" alt="">
     </header>
@@ -49,7 +50,7 @@
     <section class="restaurant">
         <h2 class="restaurant-title">Restaurants</h2>
         <div class="restaurant-container">
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="la-palette-du-gout.html">
                 <div class="restaurant-card--new">Nouveau</div>
                 <img class="restaurant-card__image" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
@@ -57,12 +58,13 @@
                         <h3 class="restaurant-card__title">La palette du goût</h3>
                         <p class="restaurant-card__location">Ménilmontant</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="la-note-enchantée.html">
                 <div class="restaurant-card--new">Nouveau</div>
                 <img class="restaurant-card__image" src="stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
@@ -70,32 +72,35 @@
                         <h3 class="restaurant-card__title">La note enchantée</h3>
                         <p class="restaurant-card__location">Charonne</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="a-la-francaise.html">
                 <img class="restaurant-card__image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
                     <div class="restaurant-card__text">
                         <h3 class="restaurant-card__title">A la française</h3>
                         <p class="restaurant-card__location">Cité Rouge</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
-            <a class="restaurant-card" href="">
+            <a class="restaurant-card" href="le-delice-des-sens.html">
                 <img class="restaurant-card__image" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                 <div class="restaurant-card__description">
                     <div class="restaurant-card__text">
                         <h3 class="restaurant-card__title">Le délice des sens</h3>
                         <p class="restaurant-card__location">Folie-Méricourt!</p>
                     </div>
-                    <div class="restaurant-card__icon">
-                        <i class="far fa-heart"></i>
+                    <div class="restaurant-card__icon fa-stack">
+                        <i class="far fa-heart fa-stack-1x"></i>
+                        <i class="fas fa-heart fa-stack-1x"></i>
                     </div>
                 </div>
             </a>
@@ -115,7 +120,7 @@
             <a href="">Mentions légales</a>
         </div>
         <div class="footer__link">
-            <a href="">Contact</a>
+            <a href="mailto:aureliebernard29@gmail.com">Contact</a>
         </div>
     </footer>
 </body>
