--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -5,100 +5,130 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c03516f22.js" crossorigin="anonymous"></script>
-    <title>A la française</title>
+    <title>Le délice des sens</title>
 </head>
 
 <body>
     <header class="header">
-        <i class="header__return-icon fas fa-arrow-left"></i>
+        <a href="index.html"><i class="header__return-icon fas fa-arrow-left"></i></a>
         <img class="header__logo" src="ohmyfood@2x.svg" alt="">
     </header>
     <div class="menu">
-        <img class="menu-image" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+        <img class="menu-image" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
         <div class="menu-body">
             <div class="food">
-                <h1 class="food__title">A la française</h1>
-                <div class="food__icon"><i class="far fa-heart"></i></div>
+                <h1 class="food__title">Le délice des sens</h1>
+                <div class="food__icon fa-stack">
+                    <i class="far fa-heart fa-stack-1x"></i>
+                    <i class="fas fa-heart fa-stack-1x"></i>
+                </div>
             </div>
             <div class="dish-types">
                 <section class="dishes">
                     <h2 class="dishes-title">ENTREES</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Tartare de poulpe acidulé</h3>
-                            <p class="dishes-card__subtitle">Aux zestes d'orange</p>
+                            <h3 class="dishes-card__title">Tartare de thon</h3>
+                            <p class="dishes-card__subtitle">Assaisonné au yuzu</p>
                         </div>
                         <div class="dishes-card__price">25€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Velouté de légumes d'antan</h3>
-                            <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
+                            <h3 class="dishes-card__title">Bouchée de homard croustillant</h3>
+                            <p class="dishes-card__subtitle">Et sa farandole de petits légumes</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Soupe à l'oignon</h3>
-                            <p class="dishes-card__subtitle">Revisitée</p>
+                            <h3 class="dishes-card__title">Velouté de cèpes</h3>
+                            <p class="dishes-card__subtitle">Aux truffes</p>
                         </div>
                         <div class="dishes-card__price">20€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
                 <section class="dishes">
                     <h2 class="dishes-title">PLATS</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Coquilles Saint-Jacques</h3>
-                            <p class="dishes-card__subtitle">Carotte, panais, topinambour</p>
+                            <h3 class="dishes-card__title">Poulet rôti aux herbes de Provence</h3>
+                            <p class="dishes-card__subtitle">Et sa crème de truffe</p>
+                        </div>
+                        <div class="dishes-card__price">40€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
+                    <div class="dishes-card dishes-card--2">
+                        <div class="dishes-card__description">
+                            <h3 class="dishes-card__title">Langouste rôtie</h3>
+                            <p class="dishes-card__subtitle">Et ses légumes de saison</p>
                         </div>
                         <div class="dishes-card__price">35€</div>
-                    </div>
-                    <div class="dishes-card">
-                        <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Magret de canard</h3>
-                            <p class="dishes-card__subtitle">Et parmentier de pommes de terre</p>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
-                        <div class="dishes-card__price">35€</div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p class="dishes-card__subtitle">Sur son lit de gnocchis aux légumes</p>
+                            <h3 class="dishes-card__title">Côte de boeuf Angus</h3>
+                            <p class="dishes-card__subtitle">Et sa purée de panais</p>
                         </div>
                         <div class="dishes-card__price">44€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
                 <section class="dishes">
                     <h2 class="dishes-title">DESSERTS</h2>
                     <div class="dishes-line"></div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--1">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Pétales de violettes glacés</h3>
-                            <p class="dishes-card__subtitle">Et purée de noisettes</p>
+                            <h3 class="dishes-card__title">Farandole de desserts</h3>
+                            <p class="dishes-card__subtitle">Du chef</p>
                         </div>
                         <div class="dishes-card__price">18€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--2">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Fondant au chocolat</h3>
-                            <p class="dishes-card__subtitle">Revisité</p>
+                            <h3 class="dishes-card__title">Crème brulée</h3>
+                            <p class="dishes-card__subtitle">Revisitée</p>
                         </div>
                         <div class="dishes-card__price">22€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="dishes-card">
+                    <div class="dishes-card dishes-card--3">
                         <div class="dishes-card__description">
-                            <h3 class="dishes-card__title">Millefeuille croustillant</h3>
-                            <p class="dishes-card__subtitle">Myrtilles et pâte d’amande</p>
+                            <h3 class="dishes-card__title">Tiramisu</h3>
+                            <p class="dishes-card__subtitle">À la noisette</p>
                         </div>
                         <div class="dishes-card__price">23€</div>
+                        <div class="dishes-card__check">
+                            <i class="fas fa-check-circle fa-lg"></i>
+                        </div>
                     </div>
                 </section>
             </div>
@@ -121,7 +151,7 @@
             <a href="">Mentions légales</a>
         </div>
         <div class="footer__link">
-            <a href="">Contact</a>
+            <a href="mailto:aureliebernard29@gmail.com">Contact</a>
         </div>
     </footer>
 </body>
